--- a/src/app/github-repositories/github-repositories-header/github-repositories-header.component.html
+++ b/src/app/github-repositories/github-repositories-header/github-repositories-header.component.html
@@ -1,1 +1,27 @@
-<p>github-repositories-header works!</p>
+<div class="flex justify-center bg-red-400 rounded-b-3xl shadow-md mb-14">
+    <div class="container w-full p-14 text-white">
+        <div class="pb-10">
+            <h1 class="text-center text-4xl font-medium">Encuentra tus repositorios Angular</h1>
+        </div>
+        <div>
+            <form action="inline-block w-full" [formGroup]="searchForm" (ngSubmit)="onSearch()">
+                <div class="inline-block w-2/3 h-20">
+                    <input 
+                        formControlName="username"
+                        type="text" 
+                        class="p-4 w-full h-full rounded-l-2xl text-gray-900"
+                        placeholder="Escribe tu nombre de usuario de Github">
+                </div><!--
+                --><div class="inline-block w-1/3 h-20">
+                    <button 
+                        type="submit"
+                        [disabled]="!searchForm.valid || isLoading"
+                        [class.bg-gray-500]="!searchForm.valid || isLoading"
+                        class="bg-red-800 rounded-r-2xl w-full h-full">
+                        {{ isLoading ? 'Buscando...' : 'Buscar' }}
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
