--- a/src/app/github-repositories/github-repositories-list/github-repositories-list.component.html
+++ b/src/app/github-repositories/github-repositories-list/github-repositories-list.component.html
@@ -17,6 +17,9 @@
                         </a>
                     </div>
                     <div>
+                        <p class="text-red-300">{{ repository.updateAt | date: 'dd/MM/yyyy HH:mm' }}</p>
+                    </div>
+                    <div>
                         <p class="font-bold text-gray-500">12.0.1</p>
                     </div>
                 </div>
