--- a/src/app/github-repositories/github-repositories-list/github-repositories-list.component.html
+++ b/src/app/github-repositories/github-repositories-list/github-repositories-list.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center" *ngIf="repositories">
+<div class="flex justify-center" *ngIf="repositories && repositories.length">
     <div class="container">
         <div>
             <h2 class="text-center text-2xl font-medium text-gray-500 mb-8">Estos son tus repositorios</h2>
