--- a/src/app/github-repositories/github-repositories-list/github-repositories-list.component.html
+++ b/src/app/github-repositories/github-repositories-list/github-repositories-list.component.html
@@ -8,6 +8,9 @@
                 *ngFor="let repository of repositories"
                 class="w-full border-2 border-gray-200 rounded-2xl p-4">
                 <div class="flex flex-col items-center">
+                    <div 
+                        [appAvatarLoader]="repository.shortName"
+                        class="thumb bg-gray-100 bg-contain mb-2"></div>
                     <div class="pb-2">
                         <a 
                             class="text-red-500"
